--- a/food.html
+++ b/food.html
@@ -17,7 +17,7 @@
     <div class="heading">
       <h1>
         Welcome to <br />
-        AAS FOOD'S
+        DF FOOD'S
       </h1>
     </div>
     <table class="table-1">
@@ -177,7 +177,7 @@
         </h4>
       </li>
     </ul>
-    <h1 class="heading-primary" id="pizza">Pizza's 🍕</h1>
+    <h1 class="heading-primary" id="pizza">Pizza 🍕</h1>
     <ul>
       <li>
         <h4>
