--- a/grocery.html
+++ b/grocery.html
@@ -17,7 +17,7 @@
     <div class="heading">
       <h1>
         Welcome to <br />
-        AAS GROCERY
+        DF GROCERY
       </h1>
     </div>
     <table class="table-1">
