--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
       >
     </div>
     <div class="heading">
-      <h1>AAS Feedback Center</h1>
+      <h1>D.FATIMA Feedback Center</h1>
     </div>
     <table class="table-1">
       <tr>
