--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="heading">
       <h1>
         Welcome to <br />
-        DF FOOD & GROCERY
+        D.FATIMA FOOD & GROCERY
       </h1>
     </div>
     <table class="table-1">
